integration-test/compiler-plugin/src/testData/auto/test/fir/Fir.kt
fun test() {

}

class Test() {

}

val a = 2 <!CAST_NEVER_SUCCEEDS!>as<!> String

